# spec/schema/@typespec/openapi3/openapi.yaml
@@ -463,11 +463,6 @@ paths:
       responses:
         '204':
           description: 'There is no content to send for this request, but the headers may be useful. '
-          headers:
-            set-cookie:
-              required: true
-              schema:
-                type: string
         '400':
           description: The server could not understand the request due to invalid syntax.
           content:
